<resources>
    <string name="app_name">Getzila</string>
    <string name="home_bar">Home</string>
    <string name="chat_bar">Message</string>
    <string name="mycourse_bar">My course</string>
    <string name="recent_bar">Recent</string>
    <string name="account_bar">Account</string>
    <string name="have_space">Have Space</string>
    <string name="message_space">Please All Blank</string>
</resources>
